Finished the authentication for the API
